Use new link for ios version

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 			<!-- <img src="img/wsm.png" class="wsm" /> -->
 			<img src="img/sj.png" class="sj" />
 			<img src="img/dt.png" class="dt" id="ditu" />
-			<img src="img/ios.png" class="ios" onclick="xiazai(4,'https://itunes.apple.com/cn/app/mo-ca/id818983195')" />
+			<img src="img/ios.png" class="ios" onclick="xiazai(4,'https://geo.itunes.apple.com/cn/app/mo-ca-tong-cheng-mo-sheng/id818983195?mt=8')" />
 			<img src="img/andriod.png" class="andriod" onclick="xiazai(3,'http://a.app.qq.com/o/simple.jsp?pkgname=com.hoolai.moca&g_f=995177')"/>
 			<img src="img/gun_03.png" class="shutiao" />
 			<img src="img/shsd.png" class="shsd" />
