--- a/index.html
+++ b/index.html
@@ -516,10 +516,10 @@
 			<img src="img/ii_55.png" class="z1" />
 			<img src="img/ss.png" class="z2" />
 		</div>
-		<div class="safe-logo" id="safelogo">
+		<!--<div class="safe-logo" id="safelogo">
 			<img alt="" src="img/logo_0429.jpg" width="100%">
 			<a href="http://bj429.com.cn/"></a>
-		</div>
+		</div>-->
 	</body>
 	<script>
 		var zhongjian = document.getElementById("zhongjian");
@@ -567,7 +567,7 @@
 		}
 		window.onload = function() {
 			document.getElementById("body").style.display = "block";
-			safeMove();
+//			safeMove();
 			setTimeout(function() {
 				var ditu = document.getElementById("ditu");
 				ditu.className = ditu.className + " " + "dong"
