--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 				left: 6%;
 				z-index: 2;
 			}
+			.z3 {
+				position: absolute;
+				top: 95%;
+				width: 9%;
+				left: 4%;
+				z-index: 2;
+			}
 			.wsm {
 				width: 31%;
 				position: absolute;
@@ -371,6 +378,13 @@
 					left: 67px;
 					z-index: 2;
 				}
+				.z3 {
+					position: absolute;
+					top: 526px;
+					width: 102px;
+					left: 46px;
+					z-index: 2;
+				}
 				.wsm {
 					width: 345px;
 					position: absolute;
@@ -515,6 +529,7 @@
 			<img src="img/lx_34.png" class="lx" onclick="shows('contact.html')" />
 			<img src="img/ii_55.png" class="z1" />
 			<img src="img/ss.png" class="z2" />
+			<img src="img/jgwba.png" class="z3">
 		</div>
 		<!--<div class="safe-logo" id="safelogo">
 			<img alt="" src="img/logo_0429.jpg" width="100%">
