--- a/index.html
+++ b/index.html
@@ -531,6 +531,9 @@
 			<img src="img/ss.png" class="z2" />
 			<img src="img/jgwba.png" class="z3">
 		</div>
+		<a href="http://cbox.cctv.com/phone/video/index.shtml?guid=7ed968958b9246fd9657223ec553c943&from=message&isappinstalled=0" style="position: absolute; top: 5px; right: 5px;">
+			<img alt="" src="img/temp/banner-20160831.jpg" width="100%">
+		</a>
 		<!--<div class="safe-logo" id="safelogo">
 			<img alt="" src="img/logo_0429.jpg" width="100%">
 			<a href="http://bj429.com.cn/"></a>
@@ -616,10 +619,10 @@
 			}
 			return xmlHttp;
 		}
-		showUser("http://api.himoca.com/moca/Moca/Load?type=1", "");
+		//showUser("http://api.himoca.com/moca/Moca/Load?type=1", "");
 		function xiazai(type , url) {
-			showUser("http://api.himoca.com/moca/Moca/Load?type="+type, "");
-			window.open(url) ;
+			//showUser("http://api.himoca.com/moca/Moca/Load?type="+type, "");
+			window.open(url);
 		}
 		function toUsWeb() { 
 			location.href = "http://us.himoca.com";
